# p4runtime-client-rs

./: Cargo.toml  LICENSE  README.md  renovate.json
.github/workflows/: check.yaml
examples/: .gitignore
examples/basic/: Cargo.toml  README.md  basic.clab.yml  basic.py
examples/basic/p4src/: header.p4  main.p4
examples/basic/src/: main.rs
examples/lib/: p4_mininet.py
examples/tna_basic/: Cargo.toml  Makefile  README.md
examples/tna_basic/p4src/: main.p4
examples/tna_basic/src/: main.rs
examples/tna_digest/: Cargo.toml  Makefile
examples/tna_digest/p4src/: main.p4
examples/tna_digest/src/: main.rs
src/: client.rs  config.rs  counter.rs  digest.rs  lib.rs  p4info.rs  table.rs  utils.rs
src/p4info/: table.rs
src/utils/: de.rs
