[package]
name = "p4runtime-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["examples/basic", "examples/tna_basic"]

[workspace.dependencies]

# Error handling
anyhow = "1.0.89"
thiserror = "1.0.63"

# protobuf and gRPC
prost = "0.13.2"
tonic = "0.12.3"

# tokio async runtime and utilities
tokio = "1.40.0"
tokio-stream = "0.1.16"

# serde
serde = "1.0.210"

p4runtime-client = { path = "." }

[dependencies]

# Error handling
thiserror = { workspace = true }

# protobuf and gRPC
prost = { workspace = true }
tonic = { workspace = true }

# p4runtime generated code
# p4runtime = { path = "../p4runtime/rust" }
p4runtime = { git = "https://github.com/p4lang/p4runtime" }

# tokio async runtime and utilities
tokio = { workspace = true, features = ["sync"] }
tokio-stream = { workspace = true }

# serde
serde = { workspace = true, features = ["derive"] }
