[package]
name = "p4runtime-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["examples/basic", "examples/tna_basic", "examples/tna_digest"]

[workspace.dependencies]

# Error handling
anyhow = "1.0.89"
thiserror = "1.0.63"
error_set = "0.7.0"

# protobuf and gRPC
prost = "0.13.2"
tonic = "0.12.3"

# tokio async runtime and utilities
tokio = "1.40.0"
tokio-stream = "0.1.16"
tokio-util = "0.7.12"

# serde
serde = "1.0.210"

derive_builder = "0.20.2"

log = "0.4.22"
env_logger = "0.11.5"

p4runtime-client = { path = "." }

[dependencies]

# Error handling
thiserror = { workspace = true }
error_set = { workspace = true }

# protobuf and gRPC
prost = { workspace = true }
tonic = { workspace = true }

# p4runtime generated code
# p4runtime = { path = "../p4runtime/rust" }
p4runtime = { git = "https://github.com/p4lang/p4runtime" }

# tokio async runtime and utilities
tokio = { workspace = true, features = ["sync"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }

# serde
serde = { workspace = true, features = ["derive"] }

derive_builder = { workspace = true }

log = { workspace = true }
