[package]
name = "tna_basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
p4runtime-client = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true, features = ["full"] }
